# rust-ardanlabs

./: .gitignore  Cargo.toml  LICENSE  README.md
async-mt/: Cargo.toml  Locks.md  Lokcs.md  README.md
ay-aw-conc/: Cargo.toml  README.md
best-practices/: Cargo.toml  README.md
raas/: Cargo.toml  README.md
raas/manual/book/: 404.html  axum_extractors.html  axum_extractors_headers.html  axum_extractors_more.html  axum_extractors_path.html  axum_extractors_query.html  axum_file_log.html  axum_hyper_tower_tokio.html  axum_log_json.html  axum_spans.html  axum_spans_own.html  axum_tracing.html  axum_tracing_minimal.html  axum_tracing_tower.html  calling_other_services.html  config_clap.html  config_crate.html  config_dot_env.html  config_http.html  config_recap1.html  config_top.html  design_company_arch.html  design_intro.html  design_svc_config.html  design_svc_db.html  design_svc_exposure.html  design_svc_intro.html  design_svc_layer.html  design_svc_layout.html  design_svc_modular_monolith.html  design_svc_module.html  design_svc_scaling_out.html  error_handling.html  error_handling_recap.html  grpc_auth.html  grpc_conclude.html  grpc_hello.html  grpc_hello2.html  grpc_hello3.html  grpc_hello4.html  (+42 more)
raas/src/: main.rs
raas/web/: demo.html
zero2prod/: Cargo.toml  Makefile  README.md  api.http
zero2prod/migrations/: 20241026144051_create_subscriptions_table.sql
zero2prod/scripts/: init_db.sh
zero2prod/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
zero2prod/src/routes/: health_check.rs  subscriptions.rs
zero2prod/tests/: health_check.rs
(+15 files in other folders)
