[package]
name = "raas"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
tonic = "0.12.3"
tower-http = { version = "0.6.2", features = ["fs", "compression-full"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
