[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
log = "0.4.21"
env_logger = "0.11.5"
actix-web = "4"
expand = "0.3.0"
reqwest = "0.12.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-macros = "2.4.0"
serde = { version = "1.0.197", features = ["derive"] }
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]